# type_challenges

./: .gitignore  README.md  pyproject.toml  setup.cfg
type_challenges/advanced/: buffer.py  callable-protocol.py  decorator.py  descriptor.py
type_challenges/basic/: any.py  dict.py  final.py  kwargs.py  optional.py  typealias.py
