[tool.poetry]
name = "type-challenges"
version = "0.1.0"
description = ""
authors = ["sergeevalera <valeriia.sergeeva@gmail.com>"]
readme = "README.md"
packages = [{include = "type_challenges"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
